test/fail/action-return-inline.app
//There is no page with signature

application test

  define page root(){
    submit action{return roott();} {"1"}
  }